--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="left">Manutenção e Engenharia - Manutenção Porto</div>
+        <div class="left">Manutenção e Engenharia - Manutenção Porto (Versão 1.1)</div>
         <div class="right">Planeamento e Controlo da Produção</div>
     </header>
 
@@ -26,3 +26,4 @@
     <script src="js/scripts.js"></script>
 </body>
 </html>
+
